mockの自動生成ツール作成
