# src/lib/msw/handlers.ts
@@ -1,0 +1,33 @@
+/**
+ * This file is AUTO GENERATED by [msw-auto-mock](https://github.com/zoubingwu/msw-auto-mock)
+ * Feel free to commit/edit it as you need.
+ */
+import { createOpenApiHttp } from "openapi-msw"
+import type { paths } from "@/schema"
+
+const http = createOpenApiHttp<paths>()
+const baseURL = ""
+
+export const handlers = [
+  http.get(`${baseURL}/me`, ({ response }) => {
+    return response(200).json(examples.Me.value)
+  }),
+  http.get(`${baseURL}/reviews`, ({ response }) => {
+    return response(200).json([...examples.ReviewListResponse.value])
+  }),
+  http.post(`${baseURL}/reviews`, ({ response }) => {
+    return response(201).empty()
+  }),
+  http.put(`${baseURL}/reviews/{id}`, ({ response }) => {
+    return response(200).json(examples.ReviewResponse.value)
+  }),
+  http.delete(`${baseURL}/reviews/{id}`, ({ response }) => {
+    return response(204).empty()
+  }),
+]
+
+const examples = {
+  ReviewListResponse: { value: [{ id: "1", title: "title", content: "content" }] },
+  ReviewResponse: { value: { id: "1", title: "title", content: "content" } },
+  Me: { value: { name: "name", userRole: "ADMIN" } },
+} as const
